src/third_party/nasm/travis/test/v4.stderr
./travis/test/v4.asm:13: error: register set not valid for operand
./travis/test/v4.asm:14: error: invalid register set size
./travis/test/v4.asm:15: error: invalid register set size
